; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_bt_sm.c_reset_flags.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_bt_sm.c_reset_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.si_sm_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@bt_debug = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [15 x i8] c"flag reset %s\0A\00", align 1
@BT_STATUS = common dso_local global i32 0, align 4
@BT_H_BUSY = common dso_local global i32 0, align 4
@BT_CLR_WR_PTR = common dso_local global i32 0, align 4
@BT_SMS_ATN = common dso_local global i32 0, align 4
@BT_BMC_HWRST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.si_sm_data*)* @reset_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_flags(%struct.si_sm_data* %0) #0 {
  %2 = alloca %struct.si_sm_data*, align 8
  store %struct.si_sm_data* %0, %struct.si_sm_data** %2, align 8
  %3 = load i64, i64* @bt_debug, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load %struct.si_sm_data*, %struct.si_sm_data** %2, align 8
  %7 = getelementptr inbounds %struct.si_sm_data, %struct.si_sm_data* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @BT_STATUS, align 4
  %12 = call i32 @status2txt(i32 %11)
  %13 = call i32 @dev_dbg(i32 %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %5, %1
  %15 = load i32, i32* @BT_STATUS, align 4
  %16 = load i32, i32* @BT_H_BUSY, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load i32, i32* @BT_H_BUSY, align 4
  %21 = call i32 @BT_CONTROL(i32 %20)
  br label %22

22:                                               ; preds = %19, %14
  %23 = load i32, i32* @BT_CLR_WR_PTR, align 4
  %24 = call i32 @BT_CONTROL(i32 %23)
  %25 = load i32, i32* @BT_SMS_ATN, align 4
  %26 = call i32 @BT_CONTROL(i32 %25)
  %27 = load i32, i32* @BT_BMC_HWRST, align 4
  %28 = call i32 @BT_INTMASK_W(i32 %27)
  ret void
}

declare dso_local i32 @dev_dbg(i32, i8*, i32) #1

declare dso_local i32 @status2txt(i32) #1

declare dso_local i32 @BT_CONTROL(i32) #1

declare dso_local i32 @BT_INTMASK_W(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
